src/tests/snapshots/gitu__tests__cherry_pick__cherry_pick_abort.snap
---
source: src/tests/cherry_pick.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 487ec57 main modify conflict-file                                              |
 415b98a add conflict-file                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git cherry-pick --abort                                                       |
styles_hash: 6a8b38f690030ef3
