src/tests/snapshots/gitu__tests__cherry_pick__cherry_pick_conflict_status.snap
---
source: src/tests/cherry_pick.rs
expression: ctx.redact_buffer()
---
▌Cherry-picking other-branch                                                    |
                                                                                |
 Unstaged changes (1)                                                           |
 unmerged   conflict-file                                                       |
                                                                                |
 Staged changes (1)                                                             |
 unmerged   conflict-file                                                       |
                                                                                |
 Recent commits                                                                 |
 487ec57 main modify conflict-file                               Author Name __ |
 415b98a add conflict-file                                       Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 7af2b19ecff6e61c
