src/tests/snapshots/gitu__tests__cherry_pick__cherry_pick_menu.snap
---
source: src/tests/cherry_pick.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Cherry-pick                   Arguments                                        |
 a     Abort                   -e Edit commit message (--edit)                  |
 c     Continue                -n Don't commit (--no-commit)                    |
 A     Cherry-pick commit(s)   -s Add Signed-off-by lines (--signoff)           |
 q/esc Quit/Close                                                               |
styles_hash: 3d95105f0842c367
